--- a/.env
+++ b/.env
@@ -10,4 +10,5 @@ EMAIL_USER=berlianawan498@gmail.com
 EMAIL_PASS=olre djtq lzyu oaxg
 EMAIL_FROM='"NGL CLONE WANZOFC" <wanzofc.tech@gmail.com>'
 BASE_URL=http://localhost:3000
-
+RECAPTCHA_SECRET_KEY=6Lc1SDUrAAAAAF8YkxOM070_ZZUMMjtXoxDEM_rX
+RECAPTCHA_SITE_KEY=6Lc1SDUrAAAAABXLqjyLsvCLJ-cWCpa3QCfNi8-2
